næsten færdige øvelser

--- a/subgrid.html
+++ b/subgrid.html
@@ -29,8 +29,8 @@
 
         .item-b {
             display: grid;
-            grid-gap: 20px;
-            grid-template-columns: repeat(4, 1fr);
+            grid-gap: 10px;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
             grid-column: span 4;
             background: lightgreen;
             padding: 10px;
